# Dive-Ai

./: .env.example  .gitignore  ARCHITECTURE_COMPLETE.md  CHANGELOG.md  CHANGELOG_V20.4.1.md  CHANGELOG_V20.5.0.md  CHANGELOG_V21.0.0.md  CHANGELOG_V21.0.md  CHANGELOG_V22.0.0.md  CHANGELOG_V22.0.0_FINAL.md  CHANGELOG_V23.0.0.md  CHANGELOG_V23.1.0.md  CHANGELOG_V28.7.md  COMPLETE_IMPLEMENTATION_SPEC.md  DIVE_MEMORY_V25_COMPLETE.md  DIVE_SEARCH_ENGINE_DESIGN.md  DIVE_SEARCH_TRANSFORMATION_PLAN.md  DIVE_UPDATE_DESIGN.md  Dive Coder App.code-workspace  Launch-UI-TARS-Silent.bat  Launch-UI-TARS.bat  MANUS_INTEGRATION.md  MERGE_REPORT.md  POST_CLONE_INSTRUCTIONS.md  QUICKSTART.md  QUICK_LAUNCH_GUIDE.md  README.md  README_3FILE_SYSTEM.md  README_COMPLETE_PACKAGE.md  README_DIVE_SEARCH_ENGINE.md  README_DIVE_UPDATE.md  README_INSTALL.md  README_SECURITY_UPDATE.md  README_UPDATED.md  README_V20.2.md  README_V20.3.0.md  README_V20.4.0.md  README_V20_OLD.md  README_V21.0.md  README_V21.0_COMPLETE.md  (+128 more)
dive-coder-v19-5/: .env  CHANGELOG_V19_4.md  divecoder_v19_5.py  install_v19_5.ps1  pyproject.toml  requirements-v15-3.txt
dive-coder-v19-5/.shared/dive-context/: ARCHITECTURE.md  INSTALLATION.md
dive-coder-v19-5/configuration/agent/skills/: ext-getsentry-commit.md  (+5 more)
dive-coder-v19-5/configuration/configs/: account_pools.example.json
dive-coder-v19-5/development/docs/: RLM_KNOWLEDGE_LIFECYCLE_PIPELINE.md
dive-coder-v19-5/infrastructure/orchestrator/: orchestrator.py
dive-coder-v19-5/infrastructure/replication/: replication_manager.py
dive-coder-v19-5/scripts/: patch_v19_5.py
(+2560 files in other folders)
