[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dive-coder-v16"
version = "16.0.0"
description = "Multi-agent orchestration system for code generation and analysis"
requires-python = ">=3.11"
authors = [
    {name = "Manus AI", email = "team@manus.im"},
]
license = {text = "MIT"}

dependencies = [
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "locust>=2.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
